--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
       }
     ],
     "start_url": "./index.html",
-    "display": "browser",
+    "display": "fullscreen",
     "orientation": "portrait",
     "background_color": "pink",
     "theme_color":"orange"
